# krill

./: Cargo.toml  LICENSE  Makefile  README.md  i686-krill.json  linker.ld  run_daemonized.sh
.cargo/: config.toml
src/: allocator.rs  boot.s  frame_allocator.rs  gdt.rs  idt.rs  inline_asm.rs  io.rs  kernel_main.rs  libstd.rs  main.rs  page_allocator.rs  page_mapper.rs  paging.rs  pic.rs  ps2.rs  scheduler.rs  serial.rs  tss.rs  util.rs  utility_functions.rs  utility_functions.s  vga.rs
