[package]
name = "krill"
version = "0.1.0"
authors = ["Rosca Alex <roscaalex19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]