[package]
name = "krill"
version = "0.1.0"
authors = ["Rosca Alex <roscaalex19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
pc-keyboard = "0.5.1"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]