[package]
name = "krill"
version = "0.1.0"
authors = ["Rosca Alex <roscaalex19@gmail.com>"]
edition = "2018"

[lib]
name = "krill"
path = "src/kernel_main.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
pc-keyboard = "0.5.1"